force-app/main/default/objects/Promoter_Daily_Report__c/Promoter_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Report</label>
    <nameField>
        <displayFormat>PWR-{YYYY}{MM}{DD}{00000000}</displayFormat>
        <label>日报编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>