force-app/main/default/objects/Promoter_Daily_Report__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>考勤</label>
    <referenceTo>Promoter_Attendance__c</referenceTo>
    <relationshipName>Attendance_PromoterDailyReports</relationshipName>
    <type>Lookup</type>
</CustomField>