force-app/main/default/objects/Promoter_Daily_Report__c/fields/CLKeyAccountManager__c.field-meta.xml
<CustomField>
    <fullName>CLKeyAccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Key Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DailyReports3</relationshipName>
    <type>Lookup</type>
</CustomField>