force-app/main/default/objects/Promoter_Daily_Report__c/fields/Created_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Profile__c</fullName>
    <description>日报创建人简档</description>
    <formula>CreatedBy.Profile.Name</formula>
    <label>Created by Profile</label>
    <type>Text</type>
</CustomField>