force-app/main/default/objects/Promoter_Daily_Report__c/fields/ExternalId_Thailand__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Thailand__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId_Thailand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>