force-app/main/default/objects/Promoter_Daily_Report__c/fields/FinishRemark__c.field-meta.xml
<CustomField>
    <fullName>FinishRemark__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>本日已完成</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>