force-app/main/default/objects/Promoter_Daily_Report__c/fields/IDTrainingManager__c.field-meta.xml
<CustomField>
    <fullName>IDTrainingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Training Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DailyReports4</relationshipName>
    <type>Lookup</type>
</CustomField>