force-app/main/default/objects/Promoter_Daily_Report__c/fields/Is_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Today__c</fullName>
    <formula>Report_Date__c == today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Today</label>
    <type>Checkbox</type>
</CustomField>