force-app/main/default/objects/Promoter_Daily_Report__c/fields/IsChange__c.field-meta.xml
<CustomField>
    <fullName>IsChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>非创建者请勿删除</description>
    <label>*IsChange</label>
    <type>Checkbox</type>
</CustomField>