force-app/main/default/objects/Promoter_Daily_Report__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <description>非创建者请勿删除</description>
    <label>*IsNew</label>
    <type>Checkbox</type>
</CustomField>