force-app/main/default/objects/Promoter_Daily_Report__c/fields/IsPerformance__c.field-meta.xml
<CustomField>
    <fullName>IsPerformance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>在促销员，新增&quot;当日実績なし&quot;勾选项。勾选后不能“+”当日业绩。
勾选后，保存时，需要生成一条业绩为0的数据</description>
    <label>*IsPerformance</label>
    <type>Checkbox</type>
</CustomField>