force-app/main/default/objects/Promoter_Daily_Report__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <formula>Owner:User.Username</formula>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>