force-app/main/default/objects/Promoter_Daily_Report__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
                <default>true</default>
                <label>TV</label>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Sound Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>