force-app/main/default/objects/Promoter_Daily_Report__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>周调研问题反馈</label>
    <referenceTo>WeekResearchResponse__c</referenceTo>
    <relationshipName>WeekResearchResponse_PromoterDailyReport</relationshipName>
    <type>Lookup</type>
</CustomField>