force-app/main/default/objects/Promoter_Daily_Report__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND( &apos;.my.salesforce.com/services&apos;,$Api.Enterprise_Server_URL_540))+ &apos;lightning.force.com/lightning/r/Promoter_Daily_Report__c/&apos; +Id + &apos;/view&apos; , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*促销员日报链接</label>
    <type>Text</type>
</CustomField>