force-app/main/default/objects/Promoter_Daily_Report__c/fields/Report_Content__c.field-meta.xml
<CustomField>
    <fullName>Report_Content__c</fullName>
    <label>报告内容</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>