force-app/main/default/objects/Promoter_Daily_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>报告日期</label>
    <type>Date</type>
</CustomField>