force-app/main/default/objects/Promoter_Daily_Report__c/fields/ReportDateFormula__c.field-meta.xml
<CustomField>
    <fullName>ReportDateFormula__c</fullName>
    <formula>TEXT( Report_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Suggest to submit report for the day. Submit past report will trigger approval workflow.</inlineHelpText>
    <label>*报告日期</label>
    <type>Text</type>
</CustomField>