force-app/main/default/objects/Promoter_Daily_Report__c/fields/ReportSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>ReportSubmittedDate__c</fullName>
    <label>Report Submitted Date</label>
    <type>Date</type>
</CustomField>