force-app/main/default/objects/Promoter_Daily_Report__c/fields/ReportSubmittedDelayJudgment__c.field-meta.xml
<CustomField>
    <fullName>ReportSubmittedDelayJudgment__c</fullName>
    <formula>ReportSubmittedDate__c  -  Report_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Submitted Delay Judgment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>