force-app/main/default/objects/Promoter_Daily_Report__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResponsiblePerson</label>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>