force-app/main/default/objects/Promoter_Daily_Report__c/fields/Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quantity__c</fullName>
    <label>Sales Quantity</label>
    <summarizedField>Retail_Number__c.Number__c</summarizedField>
    <summaryForeignKey>Retail_Number__c.PromoterDailyReport__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>