force-app/main/default/objects/Promoter_Daily_Report__c/fields/SAOpsRegionalManager__c.field-meta.xml
<CustomField>
    <fullName>SAOpsRegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA Ops Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DailyReports2</relationshipName>
    <type>Lookup</type>
</CustomField>