force-app/main/default/objects/Promoter_Daily_Report__c/fields/SARegionalManager__c.field-meta.xml
<CustomField>
    <fullName>SARegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DailyReports1</relationshipName>
    <type>Lookup</type>
</CustomField>