force-app/main/default/objects/Promoter_Daily_Report__c/fields/Share_Gridding_Code__c.field-meta.xml
<CustomField>
    <fullName>Share_Gridding_Code__c</fullName>
    <description>非创建者请勿删除</description>
    <formula>Shop__r.Grid__r.Gridding_Code__c</formula>
    <label>*网格Key</label>
    <type>Text</type>
</CustomField>