force-app/main/default/objects/Promoter_Daily_Report__c/fields/Share_Shop__c.field-meta.xml
<CustomField>
    <fullName>Share_Shop__c</fullName>
    <description>非创建者请勿删除</description>
    <formula>Shop__r.Shop_Code_Text__c</formula>
    <label>*门店Key</label>
    <type>Text</type>
</CustomField>