force-app/main/default/objects/Promoter_Daily_Report__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Only related stores are available.</inlineHelpText>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Shop_Promoter_Week_Report</relationshipName>
    <type>Lookup</type>
</CustomField>