force-app/main/default/objects/Promoter_Daily_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Daily Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>