force-app/main/default/objects/Promoter_Daily_Report__c/fields/Store_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Store_Sales_Region__c</fullName>
    <formula>Text( Shop__r.Sales_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Sales Region</label>
    <type>Text</type>
</CustomField>