force-app/main/default/objects/Promoter_Daily_Report__c/fields/SubUser__c.field-meta.xml
<CustomField>
    <fullName>SubUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubUser</label>
    <referenceTo>SubUser__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>