force-app/main/default/objects/Promoter_Daily_Report__c/fields/SubUser_Name__c.field-meta.xml
<CustomField>
    <fullName>SubUser_Name__c</fullName>
    <formula>SubUser__r.Name</formula>
    <label>SubUser Name</label>
    <type>Text</type>
</CustomField>