force-app/main/default/objects/Promoter_Daily_Report__c/fields/Total_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock__c</fullName>
    <description>总库存</description>
    <label>Total Stock</label>
    <summarizedField>Retail_Number__c.Number__c</summarizedField>
    <summaryForeignKey>Retail_Number__c.PromoterDailyReport__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>