force-app/main/default/objects/Promoter_Daily_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shop__c</columns>
    <columns>Owner_text__c</columns>
    <columns>Report_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReportDateFormula__c</field>
        <operation>greaterOrEqual</operation>
        <value>2022-07-15</value>
    </filters>
    <filters>
        <field>Sales_Region__c</field>
        <operation>contains</operation>
        <value>Hisense Japan</value>
    </filters>
    <label>Japan</label>
    <sharedTo>
        <roleAndSubordinatesInternal>JP_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>