force-app/main/default/objects/Promoter_Daily_Report__c/listViews/All_Reports.listView-meta.xml
<ListView>
    <fullName>All_Reports</fullName>
    <columns>NAME</columns>
    <columns>ReportDateFormula__c</columns>
    <columns>Shop__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>