force-app/main/default/objects/Promoter_Daily_Report__c/listViews/Indonesia.listView-meta.xml
<ListView>
    <fullName>Indonesia</fullName>
    <columns>NAME</columns>
    <columns>ReportDateFormula__c</columns>
    <columns>Shop__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Indonesia</value>
    </filters>
    <label>Indonesia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Indonesia_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>